<resources>
    <string name="program_to_provide_information_on_educational_service_providers">A special application for the training unit of the high institute for advanced courses</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy">By creating an account, you agree to our Terms of Service and Privacy Policy</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="your_password_must_be_at_least_6_character">your password must be at least 6 character</string>
    <string name="phone">phone</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">confirm password</string>
    <string name="app_name">Motatawera Edu</string>
    <string name="remember_me">Remember me</string>
    <string name="favorite">favorite</string>
    <string name="profile">profile</string>
    <string name="filters">filters</string>
    <string name="a_student_at_the_higher_institute_for_advanced_studies_division_of_management_information_systems">A student at the Higher Institute for Advanced Studies, Division of Management Information Systems</string>
    <string name="hi_username">Hi, UserName</string>
    <string name="save">save</string>
    <string name="home">Home</string>
    <string name="info">info</string>
    <string name="show_courses">show courses</string>
    <string name="information_courese">information courese</string>
    <string name="code">code</string>
    <string-array name="category">
        <item>Electronic</item>
        <item>Commerce </item>
        <item>Organized</item>
        <item>languages</item>

    </string-array>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="my_courses">My Courses</string>
    <string name="todo">TODO</string>
    <string name="take_sure_you_remember_your_password">Take sure you remember your password</string>
    <string name="your_current_password">Your current password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_passwoord">Confirm Password</string>
    <string name="an_android_application_that_enables_users_to_know_enough_information_about_the_sites_and_places_of_educational_service_providers_whether_online_or_offline_where_the_user_can_search_for_courses_charters_and_training_courses_and_display_information_about_them_and_partner_institutions_can_announce_their_own_courses_and_provide_with_the_availability_of_reservation_through_the_application">An android application that enables users to know enough information about the sites and places of educational service providers whether online or offline where the user can search for courses charters and training courses and display information about them and partner institutions can announce their own courses and provide with the availability of reservation through the application</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with google</string>
    <string name="play">Play</string>
    <string name="android_studio_is_the_official_integrated_development_environment_for_google_s_android_operating_system">Android Studio is the official integrated development environment for Google\'s Android operating system</string>
    <string name="built_on_jetbrains_intellij_idea_software_and_designed_specifically_for_android_development">built on JetBrains\' IntelliJ IDEA software and designed specifically for Android development</string>
    <string name="note">Note</string>
    <string name="forgot_passwoord">Forgot Password</string>
    <string name="enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_your_password">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="your_email_here">Enter Your email here</string>
    <string name="reset_password">Reset Password</string>
    <string name="theme">theme</string>
    <string name="light">Light</string>
    <string name="language">language</string>
    <string name="java_coures">java coures</string>
    <string name="javascript_is_one_of_the_most_ubiquitous_programming_languages_on_the_planet_mostly_because_it_s_the_backbone_of_interactive_web_applications">JavaScript is one of the most ubiquitous programming languages on the planet, mostly because it\'s the backbone of interactive web applications</string>
    <string name="next_academy">Next Academy</string>
    <string name="_999_l_e">999 L.E</string>
    <string name="_12_12_2021">12/12/2021</string>
    <string name="el_motatawera_edu">El Motatawera Edu</string>
    <string name="naame">Name</string>
    <string name="information">information</string>
    <string name="name">name</string>
    <string name="indormation">indormation</string>
    <string name="center_name">center_name</string>
    <string name="city">city</string>
    <string name="price">price</string>
    <string name="course_name">course name</string>
    <string name="cours_information">Cours Information</string>
    <string name="haram">Haram</string>
    <string name="kattamia">Kattamia</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="free">Free</string>
    <string name="music">music</string>
    <string name="art_house">art house</string>
    <string name="our_core_learning_system_is_the_easiest_way_for_a_beginner_to_learn_guitar_it_s_a_step_by_step_series_of_videos_that_teach_using_simple_songs_to_make_learning_fun">our CORE LEARNING SYSTEM is the easiest way for a beginner to learn guitar. It’s a step-by-step series of videos that teach using simple songs to make learning fun!</string>
    <string name="action_2">action_2</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save_language">Save language</string>
    <string name="motatawera_edu">Motatawera Edu</string>
    <string name="invalid_email">Invaild Emaill address\nEmail must be yourName@company.com</string>
    <string name="valid_email">Email is required</string>
    <string name="validpassword">password is required</string>
    <string name="invalid_password">password must be 6 digit</string>
    <string name="msg">Error</string>
    <string name="confirm_valid_password">confirm password is required</string>
    <string name="confirm_invalid_password">confirm password must be 6 digit</string>
    <string name="not_equal_password">password not equal confirm password</string>
    <string name="name_required">name is required</string>
    <string name="phone_required">phone is required</string>
    <string name="invalid_phone">invalid phone required</string>
    <string name="Congratulation">Congratulation</string>
    <string name="Account_created_successful">Account Created Successful</string>
    <string name="Data_Saved">Data Saved</string>
    <string name="ok">OK</string>
    <string name="No_favourites_yet">No favourites yet</string>
    <string name="mycourses">mycourses</string>
    <string name="user">users</string>
    <string name="no">no</string>
    <string name="mostviewed">mostviewed</string>
    <string name="giza">giza</string>
    <string name="cairo">cairo</string>
    <string name="out_of_range">out of range</string>
    <string name="False">false</string>
    <string name="True">true</string>
    <string name="category">category</string>
    <string name="Isonline">isOnline</string>
    <string name="Are_You_Sure">Are You Sure</string>
    <string name="yes">yes</string>
    <string name="login">login</string>
    <string name="Cancel">Cancel</string>
    <string name="Image">image</string>
    <string name="Error_in_task">Error in task</string>
    <string name="Sign_up">Sign up</string>
    <string name="new_user">New user</string>
    <string name="data_saved_at_your_courses_page">data saved at your courses page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>