<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_filter"

            android:icon="@drawable/ic_filter"
            android:title="@string/filters" />
        <item
        android:id="@+id/nav_mycourses"
        android:icon="@drawable/ic_infooo"
        android:title="@string/my_courses" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />


    </group>


</menu>