<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:orientation="horizontal"
        android:background="@color/red">

        <TextView
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:text="@string/choose_language"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cancel_language"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_en"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/english"
            android:textSize="25dp"/>

        <RadioButton
            android:id="@+id/radio_ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/arabic"
            android:textSize="25dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/save_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/red"
        android:text="@string/save_language"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>



