<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/btnrelative"
        android:layout_width="303dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:outlineSpotShadowColor="@color/red">

        <LinearLayout
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >


                    <ImageView
                        android:id="@+id/cours_image"
                        android:layout_width="353dp"
                        android:layout_height="94dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/image_most" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/center_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/center_name"
                            android:textColor="@color/color3"

                            />

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/price"
                            android:textColor="@color/color3" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/course_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/course_name"
                        android:textColor="@color/color3" />
                </LinearLayout>

                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/course_info"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/cours_information"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:trimExpandedText="show more"
                    app:trimCollapsedText="show less"
                    app:trimMode="trimModeLine"
                    app:trimLength="20"
                    app:colorClickableText="@color/red"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
